2002-02-15  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: added rewrite documentation.

	* configure.in, configure, Skunkweb/configure.in, Skunkweb/configure: 
	added rewrite to list of services

	* FAQ: Added a faq entry about cgi directories that has been on the 
	website for some while, but which I had forgotten to put here.

2002-02-14  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/rewrite.py: Added Spruce Weber's rewrite service. 

	* pylibs/Authenticator.py (Authenticator.authenticate): this method
	was dying with an error whenever someone tried a username that was
	not in the auth file; fixed.

	* SkunkWeb/Services/httpd/protocol.py
	(HTTPProtocol.marshalResponse): necessary check for None.

	* SkunkWeb/Services/templating/Handler.py (requestHandler):
	removed optional logging for 404s and now log to access rather
	than error log.

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.extract_args):
	added a method that corresponds to the <:args:> tag to the
	connection object; returns a dictionary rather than automatically
	updating the local namespace.

2002-02-13  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/web/protocol.py (_processRequest): added check
	for None to prevent SW barfing on a debug statement

	* SkunkWeb/Services/templating/Handler.py (requestHandler):
	optionally log to error log when there is a 404 (vfs error) and
	raise a 500 for other errors (which weren't supposed to occur, but
	did)

2002-02-13  Andrew Csillag  <drew@thoughttrack.com>

	* pylibs/AE/Cache.py: fix for getPathAndMinistat which broke pretty 
	much everything. 

2002-02-10  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/Hooks.py: moved class definitions to a pylib
	(hooks.py) 

2002-02-08  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb 3.2 beta 1 cut and PyDO 1.1 beta 1 cut

2002-02-07  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: removed references to pars, which no longer